--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
@@ -322,6 +322,6 @@
         <image name="info" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="TM5-d9-Bxu"/>
+        <segue reference="F5f-SD-5lP"/>
     </inferredMetricsTieBreakers>
 </document>
